[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
known_first_party = ["kubectl_explain_failure"]

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "B",   # bugbear
  "I",   # isort
  "UP",  # pyupgrade
]
lint.ignore = [
  "E501",  # handled by black
]

[tool.ruff.lint.per-file-ignores]
"kubectl_explain_failure/tests/*" = ["B018"]
