[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubectl-explain-failure"
version = "0.0.0"
description = "Explain Kubernetes Pod failures using heuristics"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
known_first_party = ["kubectl_explain_failure"]

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "B",   # bugbear
  "I",   # isort
  "UP",  # pyupgrade
]
lint.ignore = [
  "E501",  # handled by black
]

[tool.ruff.lint.per-file-ignores]
"kubectl_explain_failure/tests/*" = ["B018"]

[tool.setuptools.packages.find]
include = ["kubectl_explain_failure"]
exclude = ["kubectl_explain_failure.tests*"]
